<resources>
    <string name="app_name">Going Postal</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_out">Sign out</string>
    <string name="add_device">Add device</string>
    <string name="please_enter_device_location">Please enter location of the device:</string>
    <string name="device_location_hint">e.g. Home or Office</string>
</resources>
